@@ -2,6 +2,12 @@
 Version 1.6.11
 *******************************************************************************
 
+2011-02-07 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>
+
+	Remove PrintThreadPoolStats() from the public API. This function uses
+	a ThreadPool object as an argument, which is not supposed to be
+	exported.
+
 2011-02-07 Fabrice Fontaine <fabrice.fontaine(at)orange-ftgroup.com>
 
 	Major bug fix in IPv6 code.
@@ -10,7 +16,7 @@ Version 1.6.11
 	changing implementation of get_port in November 20th 2010 ("gena:fix
 	several compiler warnings" commit).
 
-2011-02-11 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>
+2011-02-06 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>
 
 	Fix for incorrectly exported include files.
 
